# telekom23

./: .gitignore  pom.xml
src/main/java/org/example/: App.java  byteMessage.java  fileEncoding.java
src/main/java/zadanie1/: byteMessage.java  singleByteErrorMessage.java
zad1 - korekcja transmisji/src/main/java/org/example/: cos.txt
zad2 - Xmodem/: CMakeLists.txt  dane.txt  main.cpp  pom.xml  test.txt  test1.txt
zad2 - Xmodem/include/: CalculateCheckSum.h  SerialPort.h  XModemReceiver.h  XModemSender.h  variables.h
zad2 - Xmodem/src/: CalculateCheckSum.cpp  SerialPort .cpp  SerialPort.cpp  XModemReceiver.cpp  XModemSender  .cpp  XModemSender.cpp
zad2 - Xmodem/src/main/java/org/example/: SerialPorts.java  XModemReceiver.java  XModemSender.java
zad3 - huffman/: data
zad3 - huffman/Client/: data  pom.xml
zad3 - huffman/Client/src/main/java/org/example/: Client.java  Huffman.java  Main.java  Node.java  NodesComparator.java
zad3 - huffman/Server/: decoded  message
zad3 - huffman/Server/src/main/java/org/example/: Huffman.java  Main.java  Node.java  Server.java
zad3 - huffman/src/main/java/org/example/: Client.java  Huffman.java  Main.java
zad4 - AC/: pom.xml
zad4 - AC/src/main/java/org/example/: AudioConverter.java  Main.java
